# ChangeLog for dev-ruby/ruby-recaptcha
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  -ruby-recaptcha-1.0.0.ebuild:
  Remove old version.

  07 May 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-recaptcha-1.0.2.ebuild, +metadata.xml:
  Version bump.

*ruby-recaptcha-1.0.2 (07 May 2010)

  07 May 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-recaptcha-1.0.2.ebuild:
  Version bump.

*ruby-recaptcha-1.0.0 (26 May 2009)

  26 May 2009; Hans de Graaff <graaff@gentoo.org>
  +ruby-recaptcha-1.0.0.ebuild:
  Version bump. Package moved from dev-ruby/recaptcha due to upstream name
  change.
