@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ruby-recaptcha-1.0.2-r1 (18 Aug 2010)
+
+  18 Aug 2010; Hans de Graaff <graaff@gentoo.org>
+  +ruby-recaptcha-1.0.2-r1.ebuild:
+  Convert to ruby-fakegem.
+
   05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
   -ruby-recaptcha-1.0.0.ebuild:
   Remove old version.
